# c47-app

./: .gitmodules  PRIVACY.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/kevingraney/c47/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/kevingraney/c47/: CalculatorDisplayView.kt  CalculatorScreen.kt  MainActivity.kt
app/src/main/java/com/kevingraney/c47/engine/: C47Engine.kt  CalculatorViewModel.kt  TonePlayer.kt
app/src/main/res/drawable/: bg_button_blue.xml  bg_button_normal.xml  bg_button_orange.xml  bg_button_softkey.xml  bg_calc_body.xml  bg_display_frame.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/test/java/com/kevingraney/c47/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: gen_off_image.py
